include/codec.h

enum codec_status {
    CODEC_STATUS_SUCCESS = 0,
    CODEC_STATUS_INVALID_ARG = 1,
    CODEC_STATUS_INVALID_STATE = 2,
    CODEC_STATUS_IO_ERROR = 3,
    CODEC_STATUS_NOT_SUPPORTED = 4,
    CODEC_STATUS_INTERNAL_ERROR = 5,
};
struct codec_model;
struct codec_model_params {
    bool use_gpu;
    int32_t n_threads;
};
struct codec_model_params codec_model_default_params(void);
struct codec_model * codec_model_load_from_file(const char * path_model, struct codec_model_params params);
void codec_model_free(struct codec_model * model);